basic styles for clipboard

--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -14,5 +14,4 @@
 // ====================
 // Regions
 // ====================
-@import "regions/body";
-@import "regions/main";
+@import "regions/clipboard";
