--- a/assets/styles/_regions.scss
+++ b/assets/styles/_regions.scss
@@ -3,6 +3,9 @@
 // ====================
 // Regions
 // ====================
+@import "regions/body";
 @import "regions/header";
-@import "regions/footer";
+@import "regions/main";
+@import "regions/clipboard";
 @import "regions/sidebar";
+@import "regions/footer";
