--- a/templates/components/menu.html.twig
+++ b/templates/components/menu.html.twig
@@ -1,5 +1,3 @@
 <nav class="app-menu">
-    <p>{{ 'menu item #1' }}</p>
-    <p>{{ 'menu item #2' }}</p>
-    <p>{{ 'menu item #3' }}</p>
+    <span>{{ 'menu item #1 | menu item #2 | menu item #3' }}</span>
 </nav>
