--- a/assets/modules/homepage/_helpers.scss
+++ b/assets/modules/homepage/_helpers.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@import "../../styles/mixins";
+@import "../../styles/functions";
+
 // ====================
 // Resetting
 // ====================
