--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -15,3 +15,9 @@
 // Regions
 // ====================
 @import "regions/clipboard";
+
+// ====================
+// Components
+// ====================
+@import "components/portal-card";
+@import "components/article";
