--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -22,6 +22,11 @@ $prefix: $APP_PREFIX;
 @import "variables/screens";
 
 // ====================
+// Regions
+// ====================
+@import "variables/regions";
+
+// ====================
 // Content
 // ====================
 /**
