--- a/assets/styles/nucleus.scss
+++ b/assets/styles/nucleus.scss
@@ -3,6 +3,7 @@
 // ====================
 // Modules
 // ====================
+@import "common";
 @import "../modules/homepage/homepage";
 
 // ====================
