--- a/assets/styles/regions/_sidebar.scss
+++ b/assets/styles/regions/_sidebar.scss
@@ -15,5 +15,5 @@
   width:     350px;
   flex-grow: 0;
 
-  background-color: dimgray; // @TODO: debug bg
+  background-color: #8959A8; // @TODO: debug bg
 }
