--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -3,13 +3,35 @@
 {% block clipboard_class %}{{ 'app-homepage-clipboard' }}{% endblock %}
 {% block clipboard %}
     {% if portals %}
-        {% for portal in portals %}
-            <div>
-                <p>{{ portal.title|capitalize }}</p>
-                <p>{{ portal.caption|raw|nl2br }}</p>
-            </div>
-        {% endfor %}
+        <section class="app-homepage__layer">
+            {% for portal in portals %}
+                <div class="app-homepage-portal-card">
+                    <a href="#">
+                        <p class="app-homepage-portal-card__title">{{ portal.title|capitalize }}</p>
+                        <p class="app-homepage-portal-card__caption">
+                            {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь есть все необходимое для того, чтобы изучать английский язык онлайн бесплатно.' }}
+                        </p>
+                    </a>
+                </div>
+            {% endfor %}
+        </section>
     {% endif %}
+    <section class="app-homepage__layer">
+        <article class="app-homepage-article">
+            <h3>{{ 'О проекте'|trans }}</h3>
+            <p>
+                {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь вы найдете все необходимое для того, чтобы улучшить ваши знания и навыки владения английским языком. Изучайте английский язык вместе с нами, общайтесь и задавайте вопросы на форуме, проверяйте и развивайте ваши знания с помощью интерактивных онлайн тестов и игр. Для лучшего понимания теоретических основ английского языка, к вашим услугам наиболее полное и доступное изложение грамматики английского языка, фонетики, а также особенностей английской лексики. Рекомендации по лучшим методикам изучения ждут вас в разделе статей, посвященных теме изучения английского языка. Развивайте практические навыки владения английским языком через чтение анекдотов, топиков и английских песен. Пополняйте ваш словарный запас идиомами английского языка и пословицами. Если вы хотите изучать английский язык с помощью профессиональных преподавателей, ищите информацию о них в разделах курсы и репетиторы английского языка.'|trans|raw|nl2br }}
+            </p>
+        </article>
+    </section>
+    <section class="app-homepage__layer">
+        <article class="app-homepage-article">
+            <h3>{{ 'Наши цели'|trans }}</h3>
+            <p>
+                {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь вы найдете все необходимое для того, чтобы улучшить ваши знания и навыки владения английским языком. Изучайте английский язык вместе с нами, общайтесь и задавайте вопросы на форуме, проверяйте и развивайте ваши знания с помощью интерактивных онлайн тестов и игр. Для лучшего понимания теоретических основ английского языка, к вашим услугам наиболее полное и доступное изложение грамматики английского языка, фонетики, а также особенностей английской лексики. Рекомендации по лучшим методикам изучения ждут вас в разделе статей, посвященных теме изучения английского языка. Развивайте практические навыки владения английским языком через чтение анекдотов, топиков и английских песен. Пополняйте ваш словарный запас идиомами английского языка и пословицами. Если вы хотите изучать английский язык с помощью профессиональных преподавателей, ищите информацию о них в разделах курсы и репетиторы английского языка.'|trans|raw|nl2br }}
+            </p>
+        </article>
+    </section>
 {% endblock %}
 
 {% block css %}
