--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -9,5 +9,7 @@
 @import "mixins/flex";
 @import "mixins/cross-browsers";
 @import "mixins/absoluts";
+@import "mixins/colors";
 @import "mixins/buttons";
+@import "mixins/events";
 @import "mixins/misc";
