--- a/assets/styles/regions/_footer.scss
+++ b/assets/styles/regions/_footer.scss
@@ -16,10 +16,12 @@
  *   </footer>
  */
 .#{$prefix}-footer {
-  position: absolute;
-  right:    0;
-  bottom:   0;
-  left:     0;
+  @if($footer-absolute) {
+    position: absolute;
+    right:    0;
+    bottom:   0;
+    left:     0;
+  }
 
   &__layout {
     @include app--box-sizing();
