fix nucleus docs

--- a/assets/styles/mixins/_colors.scss
+++ b/assets/styles/mixins/_colors.scss
@@ -7,7 +7,7 @@
  *
  * @mixin
  * @section Color Mixins
- * @param $property target color
+ * @param $color target color
  * @param $amount the amount to increase the lightness by
  * @param $type should be only color or bg
  * @example
@@ -24,7 +24,7 @@
  *
  * @mixin
  * @section Color Mixins
- * @param $property target color
+ * @param $color target color
  * @param $amount the amount to increase the darkness by
  * @param $type should be only color or bg
  * @example
