small nuc.doc upd

--- a/assets/modules/homepage/components/_portal-card.scss
+++ b/assets/modules/homepage/components/_portal-card.scss
@@ -12,7 +12,7 @@
  * @markup
  *  <div class="app-homepage-portal-card">
  *    <a href="#">
- *      <p class="app-homepage-portal-card__title">{{ Español }}</p>
+ *      <p class="app-homepage-portal-card__title">Español</p>
  *      <p class="app-homepage-portal-card__caption">
  *        For anyone who wants to know English, we have created this site, completely dedicated to its study. It has everything you need to learn English online for free.
  *      </p>
