--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -5,14 +5,9 @@
     {% if portals %}
         <section class="app-homepage__layer">
             {% for portal in portals %}
-                <div class="app-homepage-portal-card">
-                    <a href="#">
-                        <p class="app-homepage-portal-card__title">{{ portal.title|capitalize }}</p>
-                        <p class="app-homepage-portal-card__caption">
-                            {{ 'Для всех, кто хочет знать английский язык мы создали этот сайт, полностью посвященный его изучению. Здесь есть все необходимое для того, чтобы изучать английский язык онлайн бесплатно.' }}
-                        </p>
-                    </a>
-                </div>
+                {% include 'homepage/components/portal-card.html.twig' with {
+                    'portal': portal
+                } only %}
             {% endfor %}
         </section>
     {% endif %}
