--- a/assets/modules/homepage/components/_portal-card.scss
+++ b/assets/modules/homepage/components/_portal-card.scss
@@ -13,7 +13,7 @@
  *  <div class="app-homepage-portal-card">
  *    <a href="#">
  *      <p class="app-homepage-portal-card__title">Español</p>
- *      <p class="app-homepage-portal-card__caption">
+ *      <p class="app-homepage-portal-card__preview">
  *        For anyone who wants to know English, we have created this site, completely dedicated to its study. It has everything you need to learn English online for free.
  *      </p>
  *    </a>
@@ -46,7 +46,7 @@
     font-weight: bold;
   }
 
-  &__caption {
+  &__preview {
     text-align: center;
   }
 }
