--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -21,3 +21,5 @@
 // ====================
 @import "components/portal-card";
 @import "components/article";
+@import "components/infograph";
+@import "components/separator";
