--- a/templates/homepage/_includes/css.html.twig
+++ b/templates/homepage/_includes/css.html.twig
@@ -1,1 +1,2 @@
+<link type="text/css" rel="stylesheet" href="{{ asset('web/css/common.css') }}" media="all"/>
 <link type="text/css" rel="stylesheet" href="{{ asset('web/css/homepage.css') }}" media="all"/>
