--- a/assets/modules/homepage/_helpers.scss
+++ b/assets/modules/homepage/_helpers.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-@import "../../styles/mixins";
-@import "../../styles/functions";
+@import "../common/mixins";
+@import "../common/functions";
 
 // ====================
 // Resetting
