--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -9,7 +9,7 @@
 // ====================
 // Common
 // ====================
-@import "../../styles/common";
+@import "../common/common";
 
 // ====================
 // Regions
