--- a/templates/regions/sidebar.html.twig
+++ b/templates/regions/sidebar.html.twig
@@ -2,7 +2,7 @@
     {% if quote %}
         <article class="app-sidebar-quote">
             <blockquote>{{ quote.text }}</blockquote>
-            <span>{{ quote.author }}</span>
+            <span class="app-sidebar-quote__author">{{ quote.author }}</span>
         </article>
     {% endif %}
 </aside>
