--- a/assets/modules/homepage/regions/_clipboard.scss
+++ b/assets/modules/homepage/regions/_clipboard.scss
@@ -10,7 +10,7 @@
  * @section Homepage
  */
 .#{$prefix}-homepage-clipboard {
-  @include app--flex-center();
+  @include app--flex-col-center();
 }
 
 /**
