--- a/templates/components/menu.html.twig
+++ b/templates/components/menu.html.twig
@@ -1,3 +1,30 @@
 <nav class="app-menu">
-    <span>{{ 'menu item #1 | menu item #2 | menu item #3' }}</span>
+    <span>{{ '<' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Грамматика' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Фонетика' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Лексика' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Статьи' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Топики' }}</span>
+    <span class="app-menu__separator"></span>
+    <span>{{ 'Тексты песен' }}</span>
 </nav>
+
+{#<nav class="rl-navigation rl-flex rl-margin__top--small mdl-cell--12-col">#}
+    {#{% if menu.back_link is defined %}#}
+        {#<a href="{{ menu.back_link }}" class="rl-navigation__item">{{ '<' }}</a>#}
+        {#<span class="rl-navigation__separator"></span>#}
+    {#{% endif %}#}
+    {#{% for menuItem in menu.items %}#}
+        {#<a href="{{ menuItem.link }}" class="rl-navigation__item">#}
+            {#{{ menuItem.name }}#}
+        {#</a>#}
+        {#{% if not loop.last %}#}
+            {#<span class="rl-navigation__separator"></span>#}
+        {#{% endif %}#}
+    {#{% endfor %}#}
+{#</nav>#}
