--- a/assets/modules/common/regions/_header.scss
+++ b/assets/modules/common/regions/_header.scss
@@ -51,7 +51,7 @@
   }
 
   &__logo {
-    @include app--flex-center();
+    @include app--flex-col-center();
     flex-shrink: 0;
     flex-grow:   0;
     width:       250px;
