--- a/templates/regions/header.html.twig
+++ b/templates/regions/header.html.twig
@@ -10,19 +10,19 @@
             <div class="app-header__actions">
                 <button type="button"
                         name="user"
-                        class="app-header__button"
+                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
                 >
                     <span class="app-mdi"><i class="mdi mdi-account"></i></span>
                 </button>
                 <button type="button"
                         name="lang"
-                        class="app-header__button"
+                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
                 >
                     <span class="app-mdi"><i class="mdi mdi-flag"></i></span>
                 </button>
                 <button type="button"
                         name="search"
-                        class="app-header__button"
+                        class="{{ _class(constant('App\\Twig\\StyleExtension::CLASS_HEADER_BUTTON')) }}"
                 >
                     <span class="app-mdi"><i class="mdi mdi-magnify"></i></span>
                 </button>
