--- a/assets/modules/common/regions/_header.scss
+++ b/assets/modules/common/regions/_header.scss
@@ -112,7 +112,7 @@
  *  <button type="button" class="app-header__button">
  *    <span class="app-mdi"><i class="mdi mdi-flag"></i></span>
  *  </button>
- *  <button type="button" class="app-header__button--flat">
+ *  <button type="button" class="app-header__button app-header__button--flat">
  *    <span class="app-mdi"><i class="mdi mdi-flag"></i></span>
  *  </button>
  */
