--- a/templates/regions/header.html.twig
+++ b/templates/regions/header.html.twig
@@ -1,6 +1,6 @@
 <header class="app-header">
     <section class="app-header__layout">
-        {% include 'components/logo.html.twig' with {
+        {% include 'components/logo/header-logo.html.twig' with {
             'logo': logo
         } only %}
         <section class="app-header__workspace">
