--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -27,7 +27,7 @@
         {% endblock %}
     </head>
 
-    <body class="app-body">
+    <body class="app-body {% block body_class %}{% endblock %}">
         {% block body %}
             {% if _setting('global_show_topbar') %}
                 <section class="app-topline">{{ 'topline' }}</section>
